[gd_scene load_steps=23 format=2]

[ext_resource path="res://clients/modern_client/modern_client.gd" type="Script" id=1]
[ext_resource path="res://clients/util/curtain.png" type="Texture" id=2]
[ext_resource path="res://games/celda_escape/menu.png" type="Texture" id=3]
[ext_resource path="res://tools/theming/custom_label.gd" type="Script" id=4]
[ext_resource path="res://clients/modern_client/saved/game_list.gd" type="Script" id=5]
[ext_resource path="res://clients/modern_client/action_list.gd" type="Script" id=6]
[ext_resource path="res://clients/modern_client/clicking.gd" type="Script" id=7]
[ext_resource path="res://tools/modular/console_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://clients/modern_client/selector.gd" type="Script" id=10]
[ext_resource path="res://clients/modern_client/speech.tscn" type="PackedScene" id=11]
[ext_resource path="res://clients/modern_client/saved/game_entry.tscn" type="PackedScene" id=12]
[ext_resource path="res://clients/modern_client/inventory.gd" type="Script" id=13]
[ext_resource path="res://clients/modern_client/inventory_item.tscn" type="PackedScene" id=15]
[ext_resource path="res://clients/modern_client/bubbles.tscn" type="PackedScene" id=16]
[ext_resource path="res://tools/ui_tools/slider.gd" type="Script" id=17]
[ext_resource path="res://clients/modern_client/tabs.gd" type="Script" id=19]
[ext_resource path="res://clients/modern_client/side_menu.gd" type="Script" id=20]
[ext_resource path="res://clients/modern_client/menu_button.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="modern_display" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport_container" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport" type="Viewport" parent="viewport_container"]
size = Vector2( 1920, 1080 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="texture_rect" type="TextureRect" parent="viewport_container/viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory_base" type="Control" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
end_position = Vector2( 0, 180 )
delay = 1.5

[node name="inventory" type="HBoxContainer" parent="ui/inventory_base"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -170.0
margin_bottom = -20.0
mouse_filter = 2
alignment = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
item_scene = ExtResource( 15 )

[node name="tween" type="Tween" parent="ui/inventory_base"]

[node name="selector" type="ColorRect" parent="ui"]
visible = false
margin_left = 1255.61
margin_top = 562.034
margin_right = 1804.61
margin_bottom = 872.034
mouse_filter = 2
color = Color( 1, 1, 1, 0.0588235 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
normal_color = Color( 1, 1, 1, 0.0588235 )

[node name="action_list" type="ColorRect" parent="ui"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -310.0
mouse_filter = 2
color = Color( 0.027451, 0.0823529, 0.333333, 0.576471 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rows" type="VBoxContainer" parent="ui/action_list"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="Control" parent="ui/action_list/rows"]
margin_right = 290.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2

[node name="item_name_container" type="Control" parent="ui/action_list/rows/header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -60.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_name" type="Label" parent="ui/action_list/rows/header/item_name_container"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Inodoro"
align = 1
valign = 1

[node name="close_button" type="Control" parent="ui/action_list/rows/header"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="ui/action_list/rows/header/close_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.478431 )

[node name="item_actions" parent="ui" instance=ExtResource( 16 )]
visible = false
left_action = "mano"
right_action = "mirar"

[node name="curtain" type="TextureRect" parent="ui"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speech" parent="ui" instance=ExtResource( 11 )]

[node name="curtain_animation" type="AnimationPlayer" parent="ui"]
anims/closed = SubResource( 1 )
anims/default = SubResource( 2 )
anims/down = SubResource( 3 )
anims/up = SubResource( 4 )

[node name="timer" type="Timer" parent="ui"]
one_shot = true

[node name="menu" type="ColorRect" parent="ui"]
visible = false
modulate = Color( 1, 1, 1, 0.901961 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tab_container" type="Control" parent="ui/menu"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 139.0
margin_top = 160.0
margin_right = -187.0
margin_bottom = -168.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tabs" type="Control" parent="ui/menu/tab_container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Control" parent="ui/menu/tab_container/tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Control" parent="ui/menu/tab_container/tabs/title"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
text = "Celda"
color = Color( 1, 1, 1, 1 )
label_type = "big"

[node name="game_list" type="Control" parent="ui/menu/tab_container/tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="VBoxContainer" parent="ui/menu/tab_container/tabs/game_list"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
entry_model = ExtResource( 12 )

[node name="control" parent="ui/menu/tab_container/tabs/game_list/v_box_container" instance=ExtResource( 12 )]
margin_top = 301.0
margin_right = 826.0
margin_bottom = 451.0

[node name="label" parent="ui/menu/tab_container/tabs/game_list/v_box_container/control" index="0"]
text = "(no games)"

[node name="side_menu" type="Control" parent="ui/menu"]
anchor_right = 0.4
anchor_bottom = 1.0
margin_right = -6.10352e-05
mouse_filter = 2
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}
slide_mode = 0
end_position = Vector2( -770, 0 )
delay = 2.0
end_enabled = false
overlay_path = NodePath("../../menu")

[node name="menu_buttons" type="VBoxContainer" parent="ui/menu/side_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" parent="ui/menu/side_menu/menu_buttons" groups=[
"only_if_playing",
] instance=ExtResource( 21 )]
margin_top = 80.0
margin_bottom = 230.0
caption = "MENU_CONTINUE"

[node name="save_game" parent="ui/menu/side_menu/menu_buttons" instance=ExtResource( 21 )]
visible = false
margin_top = 234.0
margin_bottom = 384.0
caption = "MENU_SAVE_GAME"

[node name="new_game" parent="ui/menu/side_menu/menu_buttons" instance=ExtResource( 21 )]
margin_top = 388.0
margin_bottom = 538.0
caption = "MENU_NEW_GAME"

[node name="load_game" parent="ui/menu/side_menu/menu_buttons" instance=ExtResource( 21 )]
visible = false
margin_top = 542.0
margin_bottom = 692.0
caption = "MENU_LOAD_GAME"

[node name="options" parent="ui/menu/side_menu/menu_buttons" instance=ExtResource( 21 )]
margin_top = 696.0
margin_bottom = 846.0
caption = "MENU_OPTIONS"

[node name="quit" parent="ui/menu/side_menu/menu_buttons" instance=ExtResource( 21 )]
margin_top = 850.0
margin_bottom = 1000.0
caption = "MENU_QUIT"

[node name="tween" type="Tween" parent="ui/menu/side_menu"]

[node name="back_button" type="Button" parent="ui/menu"]
margin_left = 1061.05
margin_top = 927.002
margin_right = 1609.05
margin_bottom = 1049.0
text = "GO_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_player" type="AudioStreamPlayer" parent="."]

[node name="label" type="Label" parent="."]
visible = false
margin_right = 46.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 8 )
text = "Y:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="y" type="Label" parent="." groups=[
"show_y",
]]
visible = false
margin_left = 45.429
margin_right = 186.429
margin_bottom = 100.0
custom_fonts/font = ExtResource( 8 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="."]
visible = false
margin_left = 147.167
margin_top = 0.175583
margin_right = 484.167
margin_bottom = 100.176
custom_fonts/font = ExtResource( 8 )
text = "scale:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scale" type="Label" parent="." groups=[
"show_scale",
]]
visible = false
margin_left = 241.549
margin_right = 439.549
margin_bottom = 100.0
custom_fonts/font = ExtResource( 8 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="click" from="ui" to="." method="_on_ui_click"]
[connection signal="drag" from="ui" to="." method="_on_ui_drag"]
[connection signal="end_drag" from="ui" to="." method="_on_ui_end_drag"]
[connection signal="end_hold" from="ui" to="." method="_on_ui_end_hold"]
[connection signal="lock_hold" from="ui" to="." method="_on_ui_lock_hold"]
[connection signal="start_drag" from="ui" to="." method="_on_ui_start_drag"]
[connection signal="start_hold" from="ui" to="." method="_on_ui_start_hold"]
[connection signal="timeout" from="ui/timer" to="ui" method="_on_timer_timeout"]
[connection signal="pressed" from="ui/menu/back_button" to="." method="_on_back_button_pressed"]

[editable path="ui/menu/tab_container/tabs/game_list/v_box_container/control"]
